--- a/prod_app/assets/i18n/en.json
+++ b/prod_app/assets/i18n/en.json
@@ -10,6 +10,7 @@
     "Date": "Date",
     "Name": "Name",
     "Nakshathram": "Nakshathram",
+    "Nakshatram": "Nakshathram",
     "Phone_Number": "Phone Number",
     "Address": "Address (Optional)",
     "Amount": "Amount",
@@ -103,7 +104,7 @@
         "Add_Donations": "Add Donations",
         "Add_Donations_Desc": "Adding a donation of",
         "Name": "Name",
-        "Nakshathtam": "Nakshathtam",
+        "Nakshathram": "Nakshathram",
         "Address": "Address",
         "Phone_Number": "Phone Number",
         "Clear": "Clear",
