--- a/prod_app/assets/i18n/ml.json
+++ b/prod_app/assets/i18n/ml.json
@@ -10,6 +10,7 @@
     "Date": "തീയതി",
     "Name": "പേര്",
     "Nakshathram": "നക്ഷത്രം",
+    "Nakshatram": "നക്ഷത്രം",
     "Phone_Number": "ഫോൺ നമ്പർ",
     "Address": "വിലാസം (Optional)",
     "Amount": "തുക",
@@ -102,7 +103,7 @@
         "Add_Donations": "പുതിയ സംഭാവന",
         "Add_Donations_Desc": "ഒരു സംഭാവന ചേർക്കുന്നു",
         "Name": "പേര്",
-        "Nakshathtam": "നക്ഷത്രം",
+        "Nakshathram": "നക്ഷത്രം",
         "Address": "വിലാസം",
         "Phone_Number": "ഫോൺ നമ്പർ",
         "Clear": "ക്ലിയർ",
