--- a/prod_app/assets/i18n/ml.json
+++ b/prod_app/assets/i18n/ml.json
@@ -24,6 +24,7 @@
     "Authorized_Signature": "അംഗീകൃത ഒപ്പ്",
     "ThankYou": "നന്ദി. എന്തെങ്കിലും അന്വേഷണങ്ങൾ/ബുക്കിംഗിനായി ദയവായി {{phone_number}} ബന്ധപ്പെടുക അല്ലെങ്കിൽ {{email}} എന്ന ഇമെയിൽ വഴി ഞങ്ങൾക്ക് ഇമെയിൽ ചെയ്യുക",
     "Receipt": "രസീത് #",
+    "Recalculate": "കണക്കുകൂട്ടുക",
 
     "LOGIN": {
         "LOGIN": "ലോഗിൻ",
@@ -103,6 +104,7 @@
         "Add_Donations": "പുതിയ സംഭാവന",
         "Add_Donations_Desc": "ഒരു സംഭാവന ചേർക്കുന്നു",
         "Name": "പേര്",
+        "Item": "ഇനം",
         "Nakshathram": "നക്ഷത്രം",
         "Address": "വിലാസം",
         "Phone_Number": "ഫോൺ നമ്പർ",
