--- a/prod_app/assets/i18n/en.json
+++ b/prod_app/assets/i18n/en.json
@@ -118,7 +118,8 @@
         "Save_Print": "Save & Print",
         "Amount": "Amount",
         "Total_Donations": "Total Donations",
-        "Donations_on": "Donations on"
+        "Donations_on": "Donations on",
+        "Vanji": "Vanji donations"
     },
     "REPORTS": {
         "Financial_Reports": "Financial Reports",
