--- a/android_app/assets/i18n/en.json
+++ b/android_app/assets/i18n/en.json
@@ -119,7 +119,8 @@
         "Amount": "Amount",
         "Total_Donations": "Total Donations",
         "Donations_on": "Donations on",
-        "Vanji": "Vanji donations"
+        "Vanji": "Vanji donations",
+        "Vanji_Name": "Vanji Name"
     },
     "REPORTS": {
         "Financial_Reports": "Financial Reports",
