donations festival modification

--- a/android_app/assets/i18n/ml.json
+++ b/android_app/assets/i18n/ml.json
@@ -119,7 +119,8 @@
         "Total_Donations": "മൊത്തം സംഭാവനകൾ",
         "Donations_on": "സംഭാവനകൾ",
         "Vanji": "വഞ്ചി സംഭാവനകൾ",
-        "Vanji_Name": "ഏത് വഞ്ചി"
+        "Vanji_Name": "ഏത് വഞ്ചി",
+        "Festival": "ഉത്സവ സംഭാവനകൾ"
     },
     "REPORTS": {
         "Financial_Reports": "സാമ്പത്തിക റിപ്പോർട്ടുകൾ",
