donations festival modification and color change

--- a/android_app/assets/i18n/ml.json
+++ b/android_app/assets/i18n/ml.json
@@ -118,9 +118,9 @@
         "Amount": "തുക",
         "Total_Donations": "മൊത്തം സംഭാവനകൾ",
         "Donations_on": "സംഭാവനകൾ",
-        "Vanji": "വഞ്ചി സംഭാവനകൾ",
+        "Vanji": "വഞ്ചി സംഭാവന",
         "Vanji_Name": "ഏത് വഞ്ചി",
-        "Festival": "ഉത്സവ സംഭാവനകൾ"
+        "Festival": "ഉത്സവ സംഭാവന"
     },
     "REPORTS": {
         "Financial_Reports": "സാമ്പത്തിക റിപ്പോർട്ടുകൾ",
